--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,50 @@
+absl-py==0.12.0
+astunparse==1.6.3
+cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
-ffmpeg==1.4
+cycler==0.10.0
+flatbuffers==1.12
+gast==0.3.3
+google-auth==1.27.1
+google-auth-oauthlib==0.4.3
+google-pasta==0.2.0
+grpcio==1.32.0
+h5py==2.10.0
 idna==2.10
 iso-639==0.4.5
 iso3166==1.0.1
 isodate==0.6.0
-numpy==1.20.1
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+Markdown==3.3.4
+matplotlib==3.3.4
+numpy==1.19.5
+oauthlib==3.1.0
 opencv-python==4.5.1.48
+opt-einsum==3.3.0
+Pillow==8.1.2
+protobuf==3.15.6
 psycopg2-binary==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycryptodome==3.10.1
+pyparsing==2.4.7
 PySocks==1.7.1
+python-dateutil==2.8.1
 requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
 six==1.15.0
 SQLAlchemy==1.3.23
 streamlink==2.0.0
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.4.1
+tensorflow-estimator==2.4.0
+termcolor==1.1.0
+typing-extensions==3.7.4.3
 urllib3==1.26.3
-websocket-client==0.57.0
+websocket-client==0.58.0
+Werkzeug==1.0.1
+wrapt==1.12.1
